k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: energy-planet
  labels:
    name: energy-planet
    environment: production
